[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/Levels/Primrose/rotation_disabler.gd" type="Script" id=1]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/IceGattling/IceGattling.gd" type="Script" id=2]
[ext_resource path="res://src/Effects/Basic Hit.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Effects/Textures/snow_sparkle.png" type="Texture" id=4]
[ext_resource path="res://src/Sounds/35 - MMX - Ice Freeze.ogg" type="AudioStream" id=5]
[ext_resource path="res://Axl_mod/SFX/ice_gattling.ogg" type="AudioStream" id=6]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/IceGattling/FreezeEffect.tres" type="SpriteFrames" id=7]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/IceGattling/IceGattling.res" type="SpriteFrames" id=8]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/RayGun/RayGun_Muzzle.png" type="Texture" id=9]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/RayGun/RayGun_End.png" type="Texture" id=10]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/IceGattling/ice_remains.png" type="Texture" id=11]
[ext_resource path="res://Axl_mod/Player/Projectiles/BossWeapons/IceGattling/IceGattling_remains.tres" type="Material" id=12]
[ext_resource path="res://src/Effects/Materials/IceRemains.tres" type="Material" id=13]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.5, 5.5 )

[sub_resource type="CanvasItemMaterial" id=2]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.33
emission_shape = 2
emission_box_extents = Vector3( 4, 1, 0 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity_random = 0.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 0.972549, 0.972549, 0.972549, 1 )
anim_speed = 1.0

[node name="IceGattling" type="KinematicBody2D" groups=["Player Projectile"]]
z_index = 6
collision_layer = 4
script = ExtResource( 2 )
damage = 0.25
damage_to_weakness = 15.0
fire_sound = ExtResource( 6 )
hit_sound = ExtResource( 5 )
break_guard_damage = 0.0

[node name="animatedSprite" type="AnimatedSprite" parent="."]
z_index = 6
frames = ExtResource( 8 )
animation = "Tag"
frame = 2
playing = true

[node name="freeze_effect" type="AnimatedSprite" parent="."]
visible = false
z_index = 6
frames = ExtResource( 7 )
frame = 1
playing = true

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.5, -0.5 )
scale = Vector2( 0.65, 0.65 )

[node name="particles2D" type="Particles2D" parent="."]
material = SubResource( 2 )
z_index = -1
amount = 1
lifetime = 0.2
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 4 )

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
bus = "SFX"

[node name="remains_particles" type="Particles2D" parent="."]
material = ExtResource( 12 )
position = Vector2( 0, 0.5 )
z_index = -1
emitting = false
amount = 1
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 13 )
texture = ExtResource( 11 )

[node name="Start Particle" parent="." instance=ExtResource( 3 )]
z_index = 1
texture = ExtResource( 9 )
hframes = 3
vframes = 1
animation_speed = 40.0
vertical_flip_chance = 0.0

[node name="disabler" type="Node" parent="Start Particle"]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="Hit Particle" parent="." instance=ExtResource( 3 )]
position = Vector2( 17, 0 )
z_index = 1
texture = ExtResource( 10 )
hframes = 3
vframes = 1
animation_speed = 30.0
vertical_flip_chance = 0.0

[node name="disabler" type="Node" parent="Hit Particle"]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="deflect_particle" type="Sprite" parent="."]
visible = false
position = Vector2( 17, 0 )
z_index = 1
texture = ExtResource( 10 )
hframes = 3
script = ExtResource( 14 )
animation_speed = 30.0
one_shot = true

[node name="disabler" type="Node" parent="deflect_particle"]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[node name="disabler" type="Node" parent="."]
script = ExtResource( 1 )
fade_out = true
delete_after_fade = true

[connection signal="screen_exited" from="visibilityNotifier2D" to="." method="_on_visibilityNotifier2D_screen_exited"]
